// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogRenderer /> should render correctly - index 1`] = `
<div>
  <div
    class="skeleton__outer skeleton__section"
  >
    <div
      class="skeleton__shimmer"
      style="margin-left: -0px;"
    />
  </div>
  <div
    class="skeleton__outer skeleton__card blog-renderer__body-skeleton"
  >
    <div
      class="skeleton__shimmer"
      style="margin-left: -0px;"
    />
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="typography__main creative-commons__inner"
    >
      <h2
        class="typography__text typography__text--subsection"
        id="copyright"
      >
        Copyright
      </h2>
      <span
        class="paragraph"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="text-link__icon-container"
          >
            <svg
              class="icon text-link__icon"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with blog 1`] = `
<div>
  <a
    class="text-link text-link--text-link text-link--no-padding text-link--inline page-title__link"
    href="/blogs"
  >
    ⇠ Blogs
  </a>
  <div
    class="typography__main"
  >
    <h1
      class="typography__text typography__text--section page-title__section page-title__section--with-link"
      id="st.-ives-⛵-2018"
    >
      St. Ives ⛵ 2018
    </h1>
    <div
      class="blog-renderer__date"
    >
      <span
        class="article-date__date"
        style="font-style: italic;"
      >
        Published 
        TEST_DATE
      </span>
    </div>
    <div
      class="blog-renderer__tag-list"
    >
      <div
        class="tag__outer blog-renderer__tag"
      >
        <span
          class="tag tag--travel"
        >
          Travel
        </span>
      </div>
    </div>
    <div
      class="markdown-renderer__outer"
    >
      <span
        class="paragraph markdown-renderer__element markdown-renderer__paragraph"
      >
        Some content with 
        <a
          aria-label="a link (opens in a new tab)"
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="https://duckduckgo.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          a link
          <div
            class="text-link__icon-container"
          >
            <svg
              class="icon text-link__icon"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        <br />
      </span>
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="typography__main creative-commons__inner"
    >
      <h2
        class="typography__text typography__text--subsection"
        id="copyright"
      >
        Copyright
      </h2>
      <span
        class="paragraph"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="text-link__icon-container"
          >
            <svg
              class="icon text-link__icon"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with blog and admin 1`] = `
<div>
  <a
    class="text-link text-link--text-link text-link--no-padding text-link--inline page-title__link"
    href="/blogs"
  >
    ⇠ Blogs
  </a>
  <div
    class="typography__main"
  >
    <h1
      class="typography__text typography__text--section page-title__section page-title__section--with-link"
      id="st.-ives-⛵-2018"
    >
      St. Ives ⛵ 2018
    </h1>
    <div
      class="blog-renderer__date"
    >
      <span
        class="article-date__date"
        style="font-style: italic;"
      >
        Published 
        TEST_DATE
      </span>
    </div>
    <div
      class="blog-renderer__tag-list"
    >
      <div
        class="tag__outer blog-renderer__tag"
      >
        <span
          class="tag tag--travel"
        >
          Travel
        </span>
      </div>
    </div>
    <div
      class="markdown-renderer__outer"
    >
      <span
        class="paragraph markdown-renderer__element markdown-renderer__paragraph"
      >
        Some content with 
        <a
          aria-label="a link (opens in a new tab)"
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="https://duckduckgo.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          a link
          <div
            class="text-link__icon-container"
          >
            <svg
              class="icon text-link__icon"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        <br />
      </span>
    </div>
  </div>
  <div
    class="typography__main"
  >
    <h1
      class="typography__text typography__text--section"
      id="edit-blog"
    >
      EDIT BLOG
    </h1>
    <div>
      BLOG_FORM
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="typography__main creative-commons__inner"
    >
      <h2
        class="typography__text typography__text--subsection"
        id="copyright"
      >
        Copyright
      </h2>
      <span
        class="paragraph"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="text-link__icon-container"
          >
            <svg
              class="icon text-link__icon"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with blog load error 1`] = `
<div>
  <span
    class="paragraph"
  >
    Something has gone wrong while loading the blog.
  </span>
  <span
    class="paragraph"
  >
    $
    Some error
  </span>
  <div
    class="skeleton__outer skeleton__section"
  >
    <div
      class="skeleton__shimmer"
      style="margin-left: -0px;"
    />
  </div>
  <div
    class="skeleton__outer skeleton__card blog-renderer__body-skeleton"
  >
    <div
      class="skeleton__shimmer"
      style="margin-left: -0px;"
    />
  </div>
  <div
    class="typography__main typography--no-padding loading-cover__overlay--content"
  >
    <h2
      class="typography__text typography__text--subsection typography--no-padding"
      id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
    >
      This is taking a while. Maybe something isn't quite right...
    </h2>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="typography__main creative-commons__inner"
    >
      <h2
        class="typography__text typography__text--subsection"
        id="copyright"
      >
        Copyright
      </h2>
      <span
        class="paragraph"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="text-link__icon-container"
          >
            <svg
              class="icon text-link__icon"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with initial state 1`] = `
<div>
  <div
    class="skeleton__outer skeleton__section"
  >
    <div
      class="skeleton__shimmer"
      style="margin-left: -0px;"
    />
  </div>
  <div
    class="skeleton__outer skeleton__card blog-renderer__body-skeleton"
  >
    <div
      class="skeleton__shimmer"
      style="margin-left: -0px;"
    />
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="typography__main creative-commons__inner"
    >
      <h2
        class="typography__text typography__text--subsection"
        id="copyright"
      >
        Copyright
      </h2>
      <span
        class="paragraph"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="text-link__icon-container"
          >
            <svg
              class="icon text-link__icon"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with ssrBlog 1`] = `
<div>
  <a
    class="text-link text-link--text-link text-link--no-padding text-link--inline page-title__link"
    href="/blogs"
  >
    ⇠ Blogs
  </a>
  <div
    class="typography__main"
  >
    <h1
      class="typography__text typography__text--section page-title__section page-title__section--with-link"
      id="st.-ives-⛵-2018"
    >
      St. Ives ⛵ 2018
    </h1>
    <div
      class="blog-renderer__date"
    >
      <span
        class="article-date__date"
        style="font-style: italic;"
      >
        Published 
        TEST_DATE
      </span>
    </div>
    <div
      class="blog-renderer__tag-list"
    >
      <div
        class="tag__outer blog-renderer__tag"
      >
        <span
          class="tag tag--travel"
        >
          Travel
        </span>
      </div>
    </div>
    <div
      class="markdown-renderer__outer"
    >
      <span
        class="paragraph markdown-renderer__element markdown-renderer__paragraph"
      >
        Some content with 
        <a
          aria-label="a link (opens in a new tab)"
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="https://duckduckgo.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          a link
          <div
            class="text-link__icon-container"
          >
            <svg
              class="icon text-link__icon"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        <br />
      </span>
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="typography__main creative-commons__inner"
    >
      <h2
        class="typography__text typography__text--subsection"
        id="copyright"
      >
        Copyright
      </h2>
      <span
        class="paragraph"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="text-link__icon-container"
          >
            <svg
              class="icon text-link__icon"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;
